<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_widget_responsive">Responsive</string>
    <string name="app_widget_responsive_desc">A widget that adapts its layout to different sizes</string>
    <string name="app_widget_card">Card</string>
    <string name="app_widget_card_desc">Minimalist and simplified style</string>
    <string name="app_widget_full">Full</string>
    <string name="app_widget_full_desc">The player screen directly on your desktop</string>
    <string name="action_play">Play</string>
    <string name="action_play_all">Play all</string>
    <string name="action_shuffle_play">Shuffle play</string>
    <string name="action_queue_next">Queue next</string>
    <string name="shuffle_all_label">Shuffle all</string>
    <string name="shuffle_mode">Shuffle mode</string>
    <string name="repeat_mode">Repeat mode</string>
    <string name="shuffle_button_tip">Tap for normal shuffle. Long press for advanced options.</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="action_pause">Pause</string>
    <string name="action_next">Next</string>
    <string name="action_previous">Previous</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_seek_backward">Seek backward</string>
    <string name="action_seek_forward">Seek forward</string>
    <string name="action_cycle_repeat">Cycle repeat mode</string>
    <string name="action_toggle_shuffle">Toggle shuffle mode</string>
    <string name="reset_action">Reset</string>
    <string name="action_more">More</string>
    <string name="import_action">Import</string>
    <string name="create_action">Create</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Search your library…</string>
    <string name="action_voice_search">Voice search</string>
    <string name="speech_not_supported">Your device doesn\'t support speech input</string>
    <string name="search_artist_x_label">Search artist: %s</string>
    <string name="search_album_x_label">Search album: %s</string>
    <string name="search_list_x_label">Search list: %s</string>
    <string name="search_from_x_label">Search from \"%s\"</string>
    <string name="search_year_x_label">Search year: %s</string>
    <string name="search_in_folder_x">Search in folder: %s</string>
    <string name="search_last_added">Search latest music</string>
    <string name="search_playlists">Search playlists</string>
    <string name="shuffle_mode_album">Album shuffle</string>
    <string name="shuffle_mode_artist">Artist shuffle</string>
    <string name="action_share">Share</string>
    <string name="action_save">Save</string>
    <string name="back_action">Back</string>
    <string name="add_action">Add</string>
    <string name="delete_action">Delete</string>
    <string name="remove_action">Remove</string>
    <string name="clear_action">Clear</string>
    <string name="close_action">Close</string>
    <string name="continue_action">Continue</string>
    <string name="select_all_title">Select all</string>
    <string name="x_selected">%d selected</string>
    <string name="preparing_playback_title">Preparing</string>
    <string name="restoring_playback_state">Restoring playback state and queue…</string>
    <string name="playback_stopped_title">Playback stopped</string>
    <string name="playing_notification_description">The playing notification provides actions for play/pause etc.</string>
    <string name="playing_notification_name">Playing notification</string>
    <string name="action_scan_directory">Scan directory</string>
    <string name="no_device_playlists">No playlists</string>
    <string name="select_songs_title">Select songs</string>
    <string name="playlist_x_is_empty">Playlist %s is empty.</string>
    <string name="playlist_name_cannot_be_empty">Playlist name can\'t be empty</string>
    <string name="imported_playlist_x">Imported playlist \"%1$s\".</string>
    <string name="could_not_import_the_playlist_x">Couldn\'t import the playlist \"%s\"</string>
    <string name="there_are_no_importable_playlists">There are no importable playlists.</string>
    <string name="playlist_x_not_imported">Playlist %s not imported.</string>
    <string name="action_import_playlist">Import playlist…</string>
    <string name="action_import_from_file">Import from file…</string>
    <string name="select_playlists_title">Select playlists</string>
    <string name="new_playlist_title">New playlist</string>
    <string name="new_playlist_action">New</string>
    <string name="add_playlist_title">Add to playlist</string>
    <string name="rename_playlist_title">Rename playlist</string>
    <string name="lyrics_preferences_title">Lyrics</string>
    <string name="library_header">Library</string>
    <string name="display_header">Display</string>
    <string name="widgets_header">App widgets</string>
    <string name="update_title">Update</string>
    <string name="images_title">Images</string>
    <string name="lastfm_title">Last.fm</string>
    <string name="general_theme_title">General theme</string>
    <string name="ui_theme_title">UI Style</string>
    <string name="pure_black_theme_title">Pure Black</string>
    <string name="accent_color_title">Accent Color</string>
    <string name="accent_color_summary">Choose a custom color to theme the app</string>
    <string name="material_you_title">Material You</string>
    <string name="use_custom_font_title">Use custom font</string>
    <string name="appbar_mode_title">Header style</string>
    <string name="library_categories_title">Library categories</string>
    <string name="library_categories_summary">Configure visibility and order of library categories.</string>
    <string name="remember_last_page_title">Remember last page</string>
    <string name="remember_last_page_summary">Go to the last opened page on launch.</string>
    <string name="tab_mode_title">Tab titles mode</string>
    <string name="hold_tab_to_search_title">Hold tab to Search</string>
    <string name="hold_tab_to_search_summary">Long-press any navigation bar tab to open the search screen.</string>
    <string name="larger_header_image_title">Larger header image</string>
    <string name="larger_header_image_summary">Show a bigger cover image in album, artist, and playlist details.</string>
    <string name="widget_small_layout_style_title">Small layout style</string>
    <string name="widget_dynamic_colors_title">Dynamic colors</string>
    <string name="widget_dynamic_colors_summary">Adapt widget colors to the current track artwork.</string>
    <string name="widget_image_corner_radius_title">Image corner radius</string>
    <string name="widget_image_corner_radius_summary">Change the rounding for the album art.</string>
    <string name="widget_third_line_title">Third info line</string>
    <string name="widget_third_line_summary">Select what to display in the third row of text.</string>
    <string name="era_header">New Era Customization</string>
    <string name="era_primary_seed_title">Primary Seed Color</string>
    <string name="era_secondary_seed_title">Secondary Seed Color</string>
    <string name="era_tertiary_seed_title">Tertiary Seed Color</string>
    <string name="era_error_seed_title">Error Seed Color</string>
    <string name="era_harmony_mode_title">Harmony Mode</string>
    <string name="era_harmony_mode_summary">Automatically generate a balanced palette based on the primary color.</string>
    <string name="era_contrast_title">Visual Contrast</string>
    <string name="era_shape_scale_title">Shape Roundness Scale</string>
    <string name="era_shape_family_title">Shape Family</string>
    <string name="era_asymmetric_shapes_title">Asymmetric Shapes</string>
    <string name="era_asymmetric_shapes_summary">Use different radii for corners for an organic feel.</string>
    <string name="era_type_scale_title">Typography Scale</string>
    <string name="era_motion_intensity_title">Motion Intensity</string>
    <string name="era_surface_material_title">Surface Material</string>
    <string name="swipe_actions_title">Swipe Actions</string>
    <string name="pause_on_zero_volume_title">Pause on zero volume</string>
    <string name="pause_on_zero_volume_summary">Pauses the song when the volume decreases to zero and starts playing back when the volume level rises. Also works outside the app.</string>
    <string name="mp3_index_seeking_title">MP3 index seeking</string>
    <string name="mp3_index_seeking_summary">Loads the entire MP3 file into memory for seeking instead of relying on the Xing header.
        Use only if seeking fails on some VBR files.
        Requires app restart.</string>
    <string name="ignore_media_store_album_covers_title">Ignore Media Store covers</string>
    <string name="ignore_media_store_album_covers_summary">This may help to increase images quality but require more memory.</string>
    <string name="use_folder_album_cover_title">Use folder images</string>
    <string name="use_folder_album_cover_summary">If the audio file does not contain an embedded cover. Images might take a bit more of time to load.</string>
    <string name="network_features_title">Enable network features</string>
    <string name="wifi_only_network_features_title">Use network features on Wi-Fi only</string>
    <string name="wifi_only_network_features_summary">Allow internet features only when connected to Wi-Fi.</string>
    <string name="online_artist_images_title">Download artist images</string>
    <string name="online_album_covers_title">Download missing album covers</string>
    <string name="online_album_covers_summary">Downloaded images aren’t embedded into audio files; they’re only visible within the app.</string>
    <string name="preferred_image_size_title">Preferred image size</string>
    <string name="use_lrclib_provider_title">Use LRCLib provider</string>
    <string name="use_lrclib_provider_summary">Community-driven lyrics database.</string>
    <string name="use_betterlyrics_provider_title">Use BetterLyrics provider</string>
    <string name="use_betterlyrics_provider_summary">Word by word synced lyrics.</string>
    <string name="use_lyrically_provider_title">Use Lyrically provider</string>
    <string name="use_lyrically_provider_summary">Rich lyrics API with karaoke and multi-person support.</string>
    <string name="delete_downloaded_lyrics_title">Delete downloaded lyrics</string>
    <string name="delete_downloaded_lyrics_summary">Only lyrics downloaded by Booming Music. Does not affect lyrics embedded in ID3v2 tags or LRC files.</string>
    <string name="app_language_title">App language</string>
    <string name="backup_data_title">Backup app data</string>
    <string name="backup_app_data_summary">Create a file containing essential app data and save it to external storage.</string>
    <string name="restore_backup_title">Restore backup</string>
    <string name="restore_backup_summary">Restore app data (and state) from a previous backup.</string>
    <string name="stop_when_closed_from_recents_title">Stop when closed from recents</string>
    <string name="stop_when_closed_from_recents_summary">Playback stops if the app is closed from the recents list.</string>
    <string name="rotation_lock_title">Rotation lock</string>
    <string name="rotation_lock_summary">Lock the device\'s orientation. Useful in cases where music stops when rotating the device due to certain manufacturer policies.</string>
    <string name="online_music_provider_title">Music source</string>
    <string name="auto_update_title">Auto update search</string>
    <string name="receive_experimental_updates_title">Receive experimental updates</string>
    <string name="receive_experimental_updates_summary">Please note that these updates are often very unstable and are intended for experienced users.</string>
    <string name="search_for_update_title">Search for updates</string>
</resources>