<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        app:icon="@drawable/ic_language_24dp"
        app:title="@string/app_language_title"
        app:entries="@array/pref_language_names"
        app:entryValues="@array/pref_language_codes"
        app:key="language_name"/>

    <SwitchPreferenceCompat
        app:title="@string/rotation_lock_title"
        app:summary="@string/rotation_lock_summary"
        app:key="enable_rotation_lock"/>

    <Preference
        app:title="@string/backup_data_title"
        app:summary="@string/backup_app_data_summary"
        app:key="backup_data"/>

    <Preference
        app:title="@string/restore_backup_title"
        app:summary="@string/restore_backup_summary"
        app:key="restore_data"/>

    <!-- Playback Engine -->
    <SwitchPreferenceCompat
        app:title="@string/mp3_index_seeking_title"
        app:summary="@string/mp3_index_seeking_summary"
        app:key="mp3_index_seeking"/>

    <SwitchPreferenceCompat
        app:title="@string/pause_on_zero_volume_title"
        app:summary="@string/pause_on_zero_volume_summary"
        app:key="pause_on_zero_volume"/>

    <SwitchPreferenceCompat
        app:title="@string/stop_when_closed_from_recents_title"
        app:summary="@string/stop_when_closed_from_recents_summary"
        app:key="stop_when_closed_from_recents"/>

    <!-- Library Engine -->
    <SwitchPreferenceCompat
        app:title="@string/ignore_media_store_album_covers_title"
        app:summary="@string/ignore_media_store_album_covers_summary"
        app:key="ignore_media_store"/>

    <SwitchPreferenceCompat
        app:title="@string/use_folder_album_cover_title"
        app:summary="@string/use_folder_album_cover_summary"
        app:key="use_folder_art"/>

    <!-- Updates -->
    <ListPreference
        app:title="@string/auto_update_title"
        app:key="update_search_mode"/>

    <SwitchPreferenceCompat
        app:title="@string/receive_experimental_updates_title"
        app:summary="@string/receive_experimental_updates_summary"
        app:key="experimental_updates"/>

    <Preference
        app:title="@string/search_for_update_title"
        app:key="search_for_update"/>

</PreferenceScreen>
