<?xml version="1.0" encoding="utf-8"?>
<!--
  This file is kept for search indexing purposes only (see SettingsSearchHelper.kt).
  The UI is now implemented in AppearanceSettingsComposeScreen.kt.
-->
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/era_header"
        app:layout="@layout/preference_category_title">

        <SwitchPreferenceCompat
            app:title="@string/era_harmony_mode_title"
            app:summary="@string/era_harmony_mode_summary"
            app:defaultValue="true"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="era_harmony_mode"/>

        <com.mardous.projectmusic.ui.component.preferences.CustomDialogPreference
            app:title="@string/era_primary_seed_title"
            app:layout="@layout/list_item_view"
            app:persistent="false"
            app:key="era_primary_seed"/>

        <com.mardous.projectmusic.ui.component.preferences.CustomDialogPreference
            app:title="@string/era_secondary_seed_title"
            app:layout="@layout/list_item_view"
            app:persistent="false"
            app:dependency="era_harmony_mode"
            app:key="era_secondary_seed"/>

        <com.mardous.projectmusic.ui.component.preferences.CustomDialogPreference
            app:title="@string/era_tertiary_seed_title"
            app:layout="@layout/list_item_view"
            app:persistent="false"
            app:dependency="era_harmony_mode"
            app:key="era_tertiary_seed"/>

        <com.mardous.projectmusic.ui.component.preferences.CustomDialogPreference
            app:title="@string/era_error_seed_title"
            app:layout="@layout/list_item_view"
            app:persistent="false"
            app:dependency="era_harmony_mode"
            app:key="era_error_seed"/>

        <ListPreference
            app:title="@string/era_shape_family_title"
            app:entries="@array/pref_era_shape_family_entries"
            app:entryValues="@array/pref_era_shape_family_values"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="ROUNDED"
            app:layout="@layout/list_item_view"
            app:key="era_shape_family"/>

        <SeekBarPreference
            app:title="@string/era_shape_scale_title"
            android:max="20"
            app:min="0"
            app:defaultValue="10"
            app:showSeekBarValue="true"
            app:layout="@layout/list_item_view_bottom_widget"
            app:widgetLayout="@layout/preference_seekbar"
            app:key="era_shape_scale"/>

        <SwitchPreferenceCompat
            app:title="@string/era_asymmetric_shapes_title"
            app:summary="@string/era_asymmetric_shapes_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="era_asymmetric_shapes"/>

        <SeekBarPreference
            app:title="@string/era_type_scale_title"
            android:max="20"
            app:min="5"
            app:defaultValue="10"
            app:showSeekBarValue="true"
            app:layout="@layout/list_item_view_bottom_widget"
            app:widgetLayout="@layout/preference_seekbar"
            app:key="era_type_scale"/>

        <SeekBarPreference
            app:title="@string/era_contrast_title"
            android:max="20"
            app:min="0"
            app:defaultValue="10"
            app:showSeekBarValue="true"
            app:layout="@layout/list_item_view_bottom_widget"
            app:widgetLayout="@layout/preference_seekbar"
            app:key="era_contrast"/>

        <ListPreference
            app:title="@string/era_surface_material_title"
            app:entries="@array/pref_era_surface_material_entries"
            app:entryValues="@array/pref_era_surface_material_values"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="SOLID"
            app:layout="@layout/list_item_view"
            app:key="era_surface_material"/>

        <ListPreference
            app:title="@string/era_motion_intensity_title"
            app:entries="@array/pref_era_motion_intensity_entries"
            app:entryValues="@array/pref_era_motion_intensity_values"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="1"
            app:layout="@layout/list_item_view"
            app:key="era_motion_intensity"/>

        <SeekBarPreference
            app:title="Era Vibrancy"
            android:max="20"
            app:min="0"
            app:defaultValue="10"
            app:showSeekBarValue="true"
            app:layout="@layout/list_item_view_bottom_widget"
            app:widgetLayout="@layout/preference_seekbar"
            app:key="era_vibrancy"/>

        <SwitchPreferenceCompat
            app:title="Adaptive Iconography"
            app:defaultValue="true"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="era_adaptive_iconography"/>

    </PreferenceCategory>

    <com.mardous.projectmusic.ui.component.preferences.ThemePreference
        app:icon="@drawable/ic_contrast_24dp"
        app:title="@string/general_theme_title"
        app:persistent="false"
        app:layout="@layout/list_item_view_bottom_widget"
        app:widgetLayout="@layout/preference_general_theme"
        app:key="general_theme"/>

    <ListPreference
        app:iconSpaceReserved="true"
        app:title="@string/ui_theme_title"
        app:entries="@array/pref_ui_theme_entries"
        app:entryValues="@array/pref_ui_theme_values"
        app:useSimpleSummaryProvider="true"
        app:defaultValue="material"
        app:layout="@layout/list_item_view"
        app:key="ui_theme"/>

    <com.mardous.projectmusic.ui.component.preferences.CustomDialogPreference
        app:icon="@drawable/ic_palette_24dp"
        app:title="@string/accent_color_title"
        app:summary="@string/accent_color_summary"
        app:layout="@layout/list_item_view"
        app:persistent="false"
        app:key="accent_color"/>

    <SwitchPreferenceCompat
        app:iconSpaceReserved="true"
        app:title="@string/material_you_title"
        app:defaultValue="@bool/md3_supported"
        app:layout="@layout/list_item_view"
        app:widgetLayout="@layout/preference_switch"
        app:key="material_you"/>

    <SwitchPreferenceCompat
        app:iconSpaceReserved="true"
        app:title="@string/pure_black_theme_title"
        app:defaultValue="false"
        app:layout="@layout/list_item_view"
        app:widgetLayout="@layout/preference_switch"
        app:key="black_theme"/>

    <SwitchPreferenceCompat
        app:icon="@drawable/ic_text_fields_24dp"
        app:title="@string/use_custom_font_title"
        app:defaultValue="true"
        app:layout="@layout/list_item_view"
        app:widgetLayout="@layout/preference_switch"
        app:key="use_custom_font"/>

    <ListPreference
        app:iconSpaceReserved="true"
        app:title="@string/appbar_mode_title"
        app:entries="@array/pref_appbar_mode_entries"
        app:entryValues="@array/pref_appbar_mode_values"
        app:useSimpleSummaryProvider="true"
        app:defaultValue="compact"
        app:layout="@layout/list_item_view"
        app:key="appbar_mode"/>

    <PreferenceCategory
        app:title="@string/library_header"
        app:layout="@layout/preference_category_title">

        <com.mardous.projectmusic.ui.component.preferences.CustomDialogPreference
            app:icon="@drawable/ic_tab_24dp"
            app:title="@string/library_categories_title"
            app:summary="@string/library_categories_summary"
            app:layout="@layout/list_item_view"
            app:persistent="false"
            app:key="library_categories"/>

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/remember_last_page_title"
            app:summary="@string/remember_last_page_summary"
            app:defaultValue="true"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="remember_last_page"/>

        <ListPreference
            app:iconSpaceReserved="true"
            app:title="@string/tab_mode_title"
            app:entries="@array/pref_tab_titles_mode_entries"
            app:entryValues="@array/pref_tab_titles_mode_values"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="selected"
            app:layout="@layout/list_item_view"
            app:key="tab_titles_mode"/>

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/hold_tab_to_search_title"
            app:summary="@string/hold_tab_to_search_summary"
            app:defaultValue="true"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="hold_tab_to_search"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/display_header"
        app:layout="@layout/preference_category_title">

        <Preference
            app:icon="@drawable/ic_swipe_24dp"
            app:title="@string/swipe_actions_title"
            app:layout="@layout/list_item_view"
            app:key="swipeactions"/>

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_image_24dp"
            app:title="@string/larger_header_image_title"
            app:summary="@string/larger_header_image_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="larger_header_image"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/widgets_header"
        app:layout="@layout/preference_category_title">

        <ListPreference
            app:iconSpaceReserved="true"
            app:title="@string/widget_small_layout_style_title"
            app:entries="@array/widget_small_layout_style_entries"
            app:entryValues="@array/widget_small_layout_style_values"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="simplified"
            app:layout="@layout/list_item_view"
            app:key="widget_small_layout_style"/>

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_palette_24dp"
            app:title="@string/widget_dynamic_colors_title"
            app:summary="@string/widget_dynamic_colors_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="widget_dynamic_colors"/>

        <SeekBarPreference
            app:icon="@drawable/ic_rounded_corner_24dp"
            app:title="@string/widget_image_corner_radius_title"
            app:summary="@string/widget_image_corner_radius_summary"
            android:max="32"
            app:min="8"
            app:defaultValue="8"
            app:showSeekBarValue="true"
            app:layout="@layout/list_item_view_bottom_widget"
            app:widgetLayout="@layout/preference_seekbar"
            app:key="widget_image_corner_radius"/>

        <com.mardous.projectmusic.ui.component.preferences.CustomDialogPreference
            app:iconSpaceReserved="true"
            app:title="@string/widget_third_line_title"
            app:summary="@string/widget_third_line_summary"
            app:persistent="false"
            app:layout="@layout/list_item_view"
            app:key="widget_third_line_content" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>