<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/lastfm_title"
        app:layout="@layout/preference_category_title">

        <com.mardous.projectmusic.ui.component.preferences.ServiceHubPreference
            app:key="lastfm_hub"
            app:title="@string/lastfm_title"
            app:layout="@layout/preference_compose_host"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="ListenBrainz"
        app:layout="@layout/preference_category_title">

        <com.mardous.projectmusic.ui.component.preferences.ServiceHubPreference
            app:key="listenbrainz_hub"
            app:title="ListenBrainz"
            app:layout="@layout/preference_compose_host"/>

    </PreferenceCategory>

    <SwitchPreferenceCompat
        app:icon="@drawable/ic_language_24dp"
        app:title="@string/network_features_title"
        app:defaultValue="@bool/network_features_enabled_by_default"
        app:layout="@layout/list_item_view"
        app:widgetLayout="@layout/preference_switch"
        app:key="network_features"/>

    <SwitchPreferenceCompat
        app:icon="@drawable/ic_network_wifi_24dp"
        app:title="@string/wifi_only_network_features_title"
        app:summary="@string/wifi_only_network_features_summary"
        app:defaultValue="true"
        app:layout="@layout/list_item_view"
        app:widgetLayout="@layout/preference_switch"
        app:dependency="network_features"
        app:key="wifi_only_network"/>

    <PreferenceCategory
        app:title="@string/online_music_provider_title"
        app:layout="@layout/preference_category_title"
        app:dependency="network_features">
        <ListPreference
            app:iconSpaceReserved="true"
            app:title="@string/online_music_provider_title"
            app:entries="@array/pref_online_provider_entries"
            app:entryValues="@array/pref_online_provider_values"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="ytmusic"
            app:layout="@layout/list_item_view"
            app:key="online_music_provider"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/images_title"
        app:layout="@layout/preference_category_title"
        app:dependency="network_features">

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_artist_24dp"
            app:title="@string/online_artist_images_title"
            app:defaultValue="true"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="allow_online_artist_images"/>

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_album_24dp"
            app:title="@string/online_album_covers_title"
            app:summary="@string/online_album_covers_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="allow_online_album_covers"/>

        <ListPreference
            app:iconSpaceReserved="true"
            app:title="@string/preferred_image_size_title"
            app:entries="@array/pref_image_size_entries"
            app:entryValues="@array/pref_image_size_values"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="medium"
            app:layout="@layout/list_item_view"
            app:key="preferred_image_size"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/lyrics_preferences_title"
        app:layout="@layout/preference_category_title"
        app:dependency="network_features">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/use_lrclib_provider_title"
            app:summary="@string/use_lrclib_provider_summary"
            app:defaultValue="true"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="lrclib_enabled"/>

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="NetEase Provider"
            app:defaultValue="true"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="netease_enabled"/>

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="Kugou Provider"
            app:defaultValue="true"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="kugou_enabled"/>

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/use_betterlyrics_provider_title"
            app:summary="@string/use_betterlyrics_provider_summary"
            app:defaultValue="true"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:key="betterlyrics_enabled"/>

        <SwitchPreferenceCompat
            app:iconSpaceReserved="true"
            app:title="@string/use_lyrically_provider_title"
            app:summary="@string/use_lyrically_provider_summary"
            app:defaultValue="true"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:isPreferenceVisible="@bool/enable_lyrically_provider"
            app:key="lyrically_enabled"/>

        <Preference
            app:icon="@drawable/ic_delete_24dp"
            app:title="@string/delete_downloaded_lyrics_title"
            app:summary="@string/delete_downloaded_lyrics_summary"
            app:layout="@layout/list_item_view"
            app:key="clear_lyrics"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/update_title"
        app:layout="@layout/preference_category_title"
        app:isPreferenceVisible="@bool/enable_builtin_updater">

        <ListPreference
            app:layout="@layout/list_item_view"
            app:title="@string/auto_update_title"
            app:entries="@array/pref_update_mode_titles"
            app:entryValues="@array/pref_update_mode_values"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="weekly"
            app:isPreferenceVisible="@bool/enable_builtin_updater"
            app:key="update_search_mode"/>

        <SwitchPreferenceCompat
            app:title="@string/receive_experimental_updates_title"
            app:summary="@string/receive_experimental_updates_summary"
            app:defaultValue="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_switch"
            app:isPreferenceVisible="@bool/enable_builtin_updater"
            app:key="experimental_updates"/>

        <com.mardous.projectmusic.ui.component.preferences.ProgressIndicatorPreference
            app:title="@string/search_for_update_title"
            app:persistent="false"
            app:layout="@layout/list_item_view"
            app:widgetLayout="@layout/preference_progressbar"
            app:isPreferenceVisible="@bool/enable_builtin_updater"
            app:key="search_for_update"/>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
